omni/tests/goldens/types/unknown_type_14.err
tests/goldens/types/unknown_type_14.omni:1:13: error: unknown type "Mystery14"
  let value14:Mystery14 = 1
              ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_14.omni:1:1: error: cannot assign int to Mystery14
  let value14:Mystery14 = 1
  ^~~ hint: adjust the expression or type annotation
